websystems.css
/* Home Page Styling */

/* Page Layout */

body {
  background-image: linear-gradient(to bottom right, #bf7743,#6e6a67);
}

.column {
  padding: 10px;
}

#leftCol {
  width: 60%;
  border: 1px solid;
  border-radius: 10px;
  border-right: 0;
  border-top-right-radius: 0%;
  border-bottom-right-radius: 0%;
}

#rightCol {
  /* background-color: rgb(200, 210, 212); */
  width: 40%;
  text-align: center;
  border: 1px solid;
  border-radius: 10px;
  border-top-left-radius: 0%;
  border-bottom-left-radius: 0%;
}

#linkCol {
  width: 100%;
  border: 1px solid;
  border-radius: 10px;
}

.row {
  display: flex;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Website Header */
.siteHeader {
  font-family: Arial;
  text-align: center;
}

/* Navigational Bar */
.navBar {
  padding: 0px 10%
}

#barOverlay {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
  position: sticky;
  top: 0;
  border-radius: 10px;
  border: 1px solid;
}

/* Navigational list: list element */

.navList {
  float: left;
}

/* Navigational Links: anchor element */

.navLinks {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
}

.navLinks:hover:not(.active) {
  background-color: #111;
}

.comments {
  float: right;
}

.active {
  background-color: chocolate;
}

/* Content */

.contentContainer {
  padding: 0px 15%
}

.introHeader {
  padding: 30px;
  text-transform: uppercase;
  text-decoration: underline;
  text-align: center;
}

.mainContent {
  padding: 5px;
  text-align: justify;
  text-justify: auto;
}

#mainImage {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
  max-height: 100%;
  max-width: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 10px;
  border: 1px;
}

table {
  border-collapse: separate;
  width: 80%;
  border: 1px solid black;
}

tr {
  text-align: center;
}

th {
  font-weight: bold;
}

.contentTable {
  margin-left: auto;
  margin-right: auto;
}

#pastLink {
  width: 250px;
  height: 150px;
}

#futureLink {
  width: 250px;
  height: 150px;
}

